--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "build:content": "tsx scripts/build-content.ts",
+    "prebuild": "npm run build:content",
+    "dev": "npm run build:content && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -19,17 +21,22 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "csv-parse": "^6.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "fs-extra": "^11.3.2",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
